Added modal to index.html

--- a/index.html
+++ b/index.html
@@ -11,10 +11,16 @@
       <header class="page-header">
           <img src="img/pokeball.png" alt="pokeball picture" class="page-header__item">
       </header>
+
       <div class="main">
-        <h1 class="page-title">pokedex</h1>
+        <h1 class="poke-title">Pokedex</h1>
+
+        <button id="show-modal">Show modal</button>
+        <div id="modal-container"></div>
+
         <ul class="pokemon-list"></ul>
       </div>
+      
     <script src="js/promise-polyfill.js"></script>
     <script src="js/fetch-polyfill.js"></script>
     <script src="js/scripts.js"></script>
